--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
             - uses: actions/checkout@v4
             - run: |
                 sudo apt install -y clang-format
-                make check-formatting
+                make check_formatting
